@@ -9,7 +9,7 @@ on:
 
 env:
   CACHE_VERSION: 3
-  DEFAULT_PYTHON: 3.6
+  DEFAULT_PYTHON: 3.8
   PRE_COMMIT_CACHE: ~/.cache/pre-commit
 
 jobs:
