@@ -57,6 +57,7 @@ repos:
             "-rn",
             "-sn",
             "--rcfile=pylintrc",
+            "--fail-on=I",
             "--load-plugins=pylint.extensions.docparams",
           ]
         # disabled plugins: pylint.extensions.mccabe
