@@ -74,9 +74,9 @@ class FileState:
         #
         # 1.   def meth8(self):
         # 2.        """test late disabling"""
-        # 3.        pylint: disable=not-callable
+        # 3.        pylint: disable=not-callable, useless-suppression
         # 4.        print(self.blip)
-        # 5.        pylint: disable=no-member
+        # 5.        pylint: disable=no-member, useless-suppression
         # 6.        print(self.bla)
         #
         # E1102 should be disabled from line 1 to 6 while E1101 from line 5 to 6
