@@ -1,4 +1,4 @@
-# pylint: disable=missing-docstring
+# pylint: disable=missing-module-docstring, missing-function-docstring
 
 def test():
     variable = ''
